<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Items</string>
    <string name="grocery_list">Grocery List</string>
    <string name="enter_item">Enter Item</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="saveButton">SAVE</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="sure_text">Are you sure ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>